ButtonAssets is implemented to have clean code structure (without duplications), PlayingBar is implemented, but it is currently with frontend bugs